build/log/idf_py_stdout_output_25208
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\Team1.Temperate-and-Humidity\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 E:/Team1.Temperate-and-Humidity/build/bootloader/bootloader.bin"
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/9] Building C object esp-idf/led_rgb/CMakeFiles/__idf_led_rgb.dir/src/led_rgb.c.obj
FAILED: esp-idf/led_rgb/CMakeFiles/__idf_led_rgb.dir/src/led_rgb.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -IE:/Team1.Temperate-and-Humidity/build/config -IE:/Team1.Temperate-and-Humidity/components/led_rgb/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/Team1.Temperate-and-Humidity=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-1-g03a2cc88d8-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/led_rgb/CMakeFiles/__idf_led_rgb.dir/src/led_rgb.c.obj -MF esp-idf\led_rgb\CMakeFiles\__idf_led_rgb.dir\src\led_rgb.c.obj.d -o esp-idf/led_rgb/CMakeFiles/__idf_led_rgb.dir/src/led_rgb.c.obj -c E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c: In function 'led_control_task':
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:35:13: error: 'u8status' undeclared (first use in this function)
   35 |         if (u8status == DHT11_OK)
      |             ^~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:35:13: note: each undeclared identifier is reported only once for each function it appears in
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:35:25: error: 'DHT11_OK' undeclared (first use in this function)
   35 |         if (u8status == DHT11_OK)
      |                         ^~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:38:17: error: 'u8temp' undeclared (first use in this function); did you mean 'mktemp'?
   38 |             if (u8temp > H_tempe_threshold) // LED Temp turning red if high temperature
      |                 ^~~~~~
      |                 mktemp
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:38:26: error: 'H_tempe_threshold' undeclared (first use in this function)
   38 |             if (u8temp > H_tempe_threshold) // LED Temp turning red if high temperature
      |                          ^~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:40:35: error: 'LED_TEMPE_RED_PIN' undeclared (first use in this function)
   40 |                 led_rgb_set_color(LED_TEMPE_RED_PIN, LED_TEMPE_GREEN_PIN, LED_TEMPE_BLUE_PIN, 1, 0, 0);
      |                                   ^~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:40:54: error: 'LED_TEMPE_GREEN_PIN' undeclared (first use in this function)
   40 |                 led_rgb_set_color(LED_TEMPE_RED_PIN, LED_TEMPE_GREEN_PIN, LED_TEMPE_BLUE_PIN, 1, 0, 0);
      |                                                      ^~~~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:40:75: error: 'LED_TEMPE_BLUE_PIN' undeclared (first use in this function)
   40 |                 led_rgb_set_color(LED_TEMPE_RED_PIN, LED_TEMPE_GREEN_PIN, LED_TEMPE_BLUE_PIN, 1, 0, 0);
      |                                                                           ^~~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:42:31: error: 'L_tempe_threshold' undeclared (first use in this function)
   42 |             else if (u8temp < L_tempe_threshold) // LED Temp turning white if high temperature
      |                               ^~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:51:17: error: 'u8humi' undeclared (first use in this function)
   51 |             if (u8humi > H_humi_threshold) // LED HUmi turning blue when high humidity
      |                 ^~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:51:26: error: 'H_humi_threshold' undeclared (first use in this function)
   51 |             if (u8humi > H_humi_threshold) // LED HUmi turning blue when high humidity
      |                          ^~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:53:35: error: 'LED_HUMI_RED_PIN' undeclared (first use in this function)
   53 |                 led_rgb_set_color(LED_HUMI_RED_PIN, LED_HUMI_GREEN_PIN, LED_HUMI_BLUE_PIN, 0, 0, 1);
      |                                   ^~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:53:53: error: 'LED_HUMI_GREEN_PIN' undeclared (first use in this function)
   53 |                 led_rgb_set_color(LED_HUMI_RED_PIN, LED_HUMI_GREEN_PIN, LED_HUMI_BLUE_PIN, 0, 0, 1);
      |                                                     ^~~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:53:73: error: 'LED_HUMI_BLUE_PIN' undeclared (first use in this function)
   53 |                 led_rgb_set_color(LED_HUMI_RED_PIN, LED_HUMI_GREEN_PIN, LED_HUMI_BLUE_PIN, 0, 0, 1);
      |                                                                         ^~~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:55:31: error: 'L_humi_threshold' undeclared (first use in this function)
   55 |             else if (u8humi < L_humi_threshold) // LED HUmi turning yellow when high humidity
      |                               ^~~~~~~~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:69:9: error: implicit declaration of function 'vTaskDelay' [-Werror=implicit-function-declaration]
   69 |         vTaskDelay(2000 / portTICK_PERIOD_MS);
      |         ^~~~~~~~~~
E:/Team1.Temperate-and-Humidity/components/led_rgb/src/led_rgb.c:69:27: error: 'portTICK_PERIOD_MS' undeclared (first use in this function)
   69 |         vTaskDelay(2000 / portTICK_PERIOD_MS);
      |                           ^~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
